# pianobot

./: README.md  pyproject.toml
piano-sounds/: README.md
piano-sounds/Steinway_Grand/: generate_wave.sh
src/pianobot/: __init__.py  audio.py  cli.py  controller.py  logging_utils.py  models.py  music.py  paths.py  pipeline.py  project.py  render.py  robot.py  scores.py  sound.py  visualization.py
tests/: test_audio.py  test_scores.py
