[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pianobot"
version = "0.1.0"
description = "Playing piano with a robotic hand — MIT 6.834 Robotic Manipulation (Fall 2021) final project"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Seongho Yeon" },
]
keywords = [
    "robotics",
    "drake",
    "piano",
    "manipulation",
    "meshcat",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "pandas",
    "pygame",
    "meshcat",
    "pydot",
    "ipython",
]

[project.urls]
Homepage = "https://github.com/seongho-yeon/playing-piano-with-a-robotic-hand"
Repository = "https://github.com/seongho-yeon/playing-piano-with-a-robotic-hand"
Course = "https://manipulation.csail.mit.edu/Fall2021/"

[project.optional-dependencies]
# These packages follow the MIT Manipulation course stack (Fall 2021) and may
# require course-specific install instructions rather than a plain pip install.
drake = [
    "drake",
]
# The course `manipulation` package is typically installed from the
# Robotic Manipulation materials (provides `manipulation.*` imports).

[tool.setuptools.packages.find]
where = ["src"]
