[project]
name = "pianobot"
version = "0.1.0"
description = "Render a synchronized two-robot performance of Salut d'Amour."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "drake==1.40.0",
    "imageio-ffmpeg>=0.6.0,<0.7",
    "manipulation==2025.3.3",
    "numpy>=2.0,<3",
    "playwright>=1.52,<2",
]

[project.scripts]
pianobot = "pianobot.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.11,<0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pianobot"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]